Use same color for chat and pad

--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
     </style>
     <script type="text/javascript">
       window.etherpad_port = "{{etherpad_port}}"
-      window.user = {name: "{{name}}"}
+      window.user = {name: "{{name}}", color: "{{color}}"}
       {{#current}}window.current = {name: "{{current.name}}", id: {{current.id}}}{{/current}}
     </script>
   </head>
