change impact icon

--- a/web/index.html
+++ b/web/index.html
@@ -178,7 +178,7 @@
 
                       <td class="padded">
                         <a data-toggle="popover" data-placement="right" data-trigger="manual" href="#challenge{{id}}" class="impact"  data-title="{{title}}">
-                          <i class="glyphicon glyphicon-edit"></i>
+                          <i class="glyphicon glyphicon-screenshot"></i>
                         </a>
                         <div style="display:none" class="popover-content">
                           <div align="center" style="margin-bottom:10px">
